--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,9 +6,21 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
-  font-weight: bold;
+  font-family: "BebasNeue";
+  src: url("./assets/fonts/BebasNeue-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url("./assets/fonts/Nunito-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url("./assets/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -28,7 +40,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "poppins";
+  /* font-family: "Montserrat"; */
+  /* font-family: "BebasNeue"; */
+  /* font-family: "Nunito"; */
+  font-family: "Quicksand";
+  /* font-family: "Poppins"; */
+  /* font-family: "corbel"; */
   background-color: #263238;
 }
 
@@ -56,4 +73,8 @@ h5 {
   font-weight: 500;
   letter-spacing: 0.5px;
   line-height: 1.2;
+}
+
+.color {
+  background-color: #1dffd9;
 }
